United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6986270 guarantee(*bcp != Bytecodes::_monitorenter || exec_mode != Deoptimization::Unpack_exception) fails
6986270 : guarantee(*bcp != Bytecodes::_monitorenter || exec_mode != Deoptimization::Unpack_exception) fails

Details
Type:
Bug
Submit Date:
2010-09-21
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
A number of jck tests failed in nightly testing the DeoptimizeALot and TieredCompilation with:

#  Internal Error (/tmp/jprt/P1/B/235533.kvn/source/src/share/vm/runtime/vframeArray.cpp:184), pid=9123, tid=2
#  guarantee(*bcp != Bytecodes::_monitorenter || exec_mode != Deoptimization::Unpack_exception) failed: shouldn't get exception during monitorenter

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/fd5d4527cdf5
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/fd5d4527cdf5
                                     
2010-09-22
EVALUATION

This guarantee should hold true for C2 but is not necessarily true for C1. The fix would be to propagate the compiler type of the deopting method to vframeArrayElement::unpack_on_stack() and apply the guarantee only to c2-compiled methods.
                                     
2010-09-21



Hardware and Software, Engineered to Work Together