6986270: guarantee(*bcp != Bytecodes::_monitorenter || exec_mode != Deoptimization::Unpack_exception) fails

Propagate the compiler type of the deopting method to vframeArrayElement::unpack_on_stack()

Reviewed-by: jrose, never